Added basic configs for the provsioning of myphpadmin

--- a/www/index.html
+++ b/www/index.html
@@ -113,13 +113,13 @@
                else if (data == 'Yes')
                {  
                    //$('#myModal').hide();  
-                  //alert("data")
-                  //location.reload();  
+                  alert("Login successful!")
+                  location.reload();  
                }  
-               alert("data")
+               //alert("data")
             },
             complete:function(){
-              alert("Complete")
+              //alert("Complete")
             } 
          });  
         }  
