--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -1,64 +1,80 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="file:///MACOS/Users/tane/favicon.ico">
-  <title>Narrow Jumbotron Template for Bootstrap</title>
-  <!-- Bootstrap core CSS -->
-  <!--	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js type="text/javascript"></script>-->
-  <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/popper.js/dist/popper.min.js"></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-  <style type="text/css"></style>
-  <link href="views/main.css" rel="stylesheet" type="text/css">
-  <!-- Custom styles for this template -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="file:///MACOS/Users/tane/favicon.ico">
+<title>Narrow Jumbotron Template for Bootstrap</title>
+<!-- Bootstrap core CSS -->
+<!--	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js type="text/javascript"></script>-->
+<script src="node_modules/jquery/dist/jquery.js"></script>
+<script src="node_modules/popper.js/dist/popper.min.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+<style type="text/css"></style>
+<link href="views/main.css" rel="stylesheet" type="text/css">
+<!-- Custom styles for this template -->
 </head>
-
-<body onLoad="displayNotes();">
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<div class="container-fluid">
-			<a class="navbar-brand">My Notes</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<form class="d-flex">
-					<input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-				</form>
-			</div>
-		</div>
-	</nav>
-
-	<div class="container my-3" id="container">
-		<div class="card text-dark bg-light mb-3">
-			<div class="card-body">
-				<h5 class="card-title">Write a note</h5>
-				<div class="form-group">
-					<textarea id="addNote" class="form-control" aria-label="With textarea"></textarea>
-				</div>
-				<br />
-				<button id="addBtn" class="btn btn-primary">Add</button>
-			</div>
-		</div>
-		
-		<hr>
-		
-		<div id="noMatches" class="row container-fluid">
-		
-		</div>
-		
-		<div id="notes" class="row container-fluid">
-			
-			
-		</div>
+<body id="backgroundBody">
+<div class="container"></div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="text-align:center">
+  <div class="container-fluid"> <a class="navbar-brand">My Notes</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <form class="d-flex">
+        <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      </form>
+    </div>
+    <h1 id="noteTextColour" style="color:white; font-size: 20px;  width: 9.5%; padding: 2x;">Font Colour: </h1>
+    <a href="#" class="btn btn-light btn-sm" ></a>
+    <h1 id="noteText" style="color:white; font-size: 20px;  width: 5%; padding: 2x;">Font: </h1>
+    <select id="input-font" onchange="">
+      <option value="Times New Roman, Times, serif;">Times New Roman</option>
+      <option value="Arial, Helvetica, sans-serif;">Arial</option>
+      <option value="Verdana">Verdana</option>
+      <option value="Impact">Impact</option>
+    </select>
+  </div>
+</nav>
+<div class="container my-3" id="container">
+  <div class="card text-dark bg-light mb-3">
+    <div class="card-body">
+      <div class="form-group row">
+        <div class="col-xs-2"> </div>
+      </div>
+      <div class="row"  >
+        <div class="col-xl-6">
+          <h5 class="card-title" style="display: inline-block; "> Please add a Note:</h5>
+        </div>
+        <div class="offset-xl-0 col-xl-6" align="right" >
+          <label for="ex1" style="text-align: right;" >Subject: </label>
+          <input class="form-control" id="subject" type="text" style="display: inline-block; width: 150px; text-align: right; " required>
+        </div>
+        <div class="offset-xl-0 col-xl-6" align="right" > </div>
+      </div>
+      <div class="form-group row">
+        <textarea id="addNote" class="form-control" aria-label="With textarea"></textarea>
+      </div>
+      <div id="inputErrorAlert" class="alert alert-warning"> 
+		  <a href="#" class="close" data-dismiss="alert">&times;</a> <strong>Error.</strong> Both fields are required
+		  
+    </div>
+		<button id="addBtn" class="btn btn-primary">Add</button>
+  </div>
 	</div>
-	<script src="./script.js"></script>
+  <div id="output"></div>
+<div id="noMatches" class="row container-fluid"> </div>
+  <div id="notes" class="row container-fluid"> </div>
+
+</div>
 </body>
 </html>
+<script>
+
+</script>
+<script src="./script.js"></script>
