--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="icon" href="file:///MACOS/Users/tane/favicon.ico">
-<title>Narrow Jumbotron Template for Bootstrap</title>
+<title>Note Taker 5000</title>
 <!-- Bootstrap core CSS --> 
 <!--	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js type="text/javascript"></script>--> 
 <script src="node_modules/jquery/dist/jquery.js"></script> 
